Added presto support to docker image

--- a/scripts/ci/kubernetes/docker/Dockerfile
+++ b/scripts/ci/kubernetes/docker/Dockerfile
@@ -41,6 +41,10 @@ RUN pip install kubernetes && \
     pip install sendgrid && \
     pip install mysqlclient && \
     pip install analytics-python && \
+    pip install hive-thrift-py && \
+    pip install pyhive && \
+    pip install impyla && \
+    pip install unicodecsv && \
     pip install psycopg2==2.7.3.1  # I had issues with older versions of psycopg2, just a warning
 
 # install airflow
